--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "test": "npm run lint && jest ."
+    "test": "npm run lint && jest .",
+    "test:watch": "npm run lint && jest . --watch"
   },
   "dependencies": {
     "next": "latest",
