--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "test": "npm run lint && jest .",
     "test:watch": "npm run lint && jest . --watch"
   },
+  "pre-commit": [
+    "test"
+  ],
   "dependencies": {
     "next": "latest",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-react": "^9.2.0",
@@ -26,11 +32,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
-    "@testing-library/jest-dom": "^5.1.0",
-    "@testing-library/react": "^9.4.0",
-    "babel-jest": "^25.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
+    "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.12.0"
   }
 }
