--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Drunken Goose Website",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build && next export",
     "start": "next start",
     "lint": "eslint .",
