--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build && next export",
+    "build": "rm -rf out && rm -rf .next && next build && next export",
     "start": "next start",
     "lint": "eslint .",
     "test": "jest .",
